--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="todo-app">
-        <h2>To-Do List <img src="images/todo.png" alt="logo"></h2>
+        <h2>To-Do List <img src="todo.png" alt="logo"></h2>
         <div class="row">
             <input type="text" id="input-box" placeholder="Add your task...">
             <button onclick="addTask()">Add</button>
