--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To-do list app website</title>
+  <title>To-do lists</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="todo-app">
-        <h2>To-Do List <img src="todo.png" alt="logo"></h2>
+        <h2>To-Do Lists <img src="todo.png" alt="logo"></h2>
         <div class="row">
             <input type="text" id="input-box" placeholder="Add your task...">
             <button onclick="addTask()">Add</button>
@@ -23,8 +23,6 @@
         </ul>
     </div>
 </div>
-
-  
   <script src="script.js"></script>
 </body>
 </html>
